refactoring navbar and main dashboard

--- a/client/src/components/movieCard/MovieCard.css
+++ b/client/src/components/movieCard/MovieCard.css
@@ -20,3 +20,10 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
+
+.readmore-button{
+	border: none;
+	background-color: transparent;
+	color: #F0A500;
+	font-weight: bold;
+}
