--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -10,6 +10,10 @@
 	font-weight: bold;
 }
 
+.nav-item{
+	padding: 10px;
+}
+
 .nav-link {
 	color: #f1f1f1 !important;
 	font-weight: bold;
@@ -43,7 +47,7 @@
 	font-weight: bold;
 }
 
-nav a.active{
+.movienest-navbar a.active{
 	color: #c59108 !important;
 }
 
