--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -1,28 +1,37 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 
 .footer{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	background-color: #17000c;
-	border-top: 1px solid #c59008c0;
+	/* background-image: url("https://i.imgur.com/ZVeAT9R.jpg"); */
+	background-color: #1a1d29;
+	padding: 8px;
+}
+
+.footer-links{
+	width: 35%;
+	display: flex;
+	justify-content: space-between;
+	padding: 5px;
 }
 
 .footer-links a{
 	text-decoration: none;
 	margin-right: 10px;
-	color: #f1f1f1;
-	font-weight: bold;
+	color: #f2f4fa;
+	font-size: 13.5px;
+	font-family: 'Inter', sans-serif;
 }
 
 .footer-links a:hover{
 	text-decoration: none;
-	color: #c59108;
+	color: #fbd300;
 	margin-right: 10px;
 }
 
 .footer-copyright-text{
-	font-weight: bold;
-	color: #f1f1f1a9;
+	color: #f2f4fa;
+	font-size: 13px;
+	font-family: 'Inter', sans-serif;
 }
