--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -2,21 +2,31 @@
 
 .movienest-navbar {
 	font-family: 'Inter', sans-serif;
-	background-color: #17000c;
 }
 
 .navbar-brand {
-	color: #f1f1f1;
+	color: #f2f4fa;
 	font-weight: bold;
+	padding: 15px 20px;
+	font-family: 'Inter', sans-serif;
+	transition: 0.3s all ease-in;
 }
 
-.nav-item{
+.navbar-brand:hover {
+	background-color: #fbd100c0;
+	color: #f2f4fa;
+
+}
+
+.nav-item {
 	padding: 10px;
 }
 
 .nav-link {
-	color: #f1f1f1 !important;
+	color: #f2f4fa !important;
 	font-weight: bold;
+	border: 2px solid transparent;
+	padding: 10px;
 }
 
 .nav-link-btn {
@@ -47,12 +57,20 @@
 	font-weight: bold;
 }
 
-.movienest-navbar a.active{
-	color: #c59108 !important;
+.movienest-navbar a.active {
+	/* background-color: #ff0040; */
+	border: 2px solid #fbd300;
+	border-radius: 5px;
+
 }
 
-.movienest-container .nav-link.active{
-	color: #c59108 !important;
-	border: 2px solid #c59108;
-	border-radius: 20px;
+
+.movienest-container .nav-link.active {
+	border-radius: 5px;
+}
+
+.movienest-container .nav-link:hover {
+	transition: 0.3s all ease;
+	border: 2px solid #fbd100c0 !important;
+	border-radius: 3px;
 }
