--- a/client/src/pages/login/Login.css
+++ b/client/src/pages/login/Login.css
@@ -1,22 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 
 .login-form-container{
 	min-height: 96vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: #2d0112;
-	/* background-color: #fffafa; */
+	background-color: #d4d4d4;
 }
 
 .login-form{
-	min-height: 30vh;
-	min-width: 20vw;
+	min-height: 40vh;
+	min-width: 25vw;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 	padding: 10px;
-	font-family: 'Poppins', sans-serif;
-	background-color: #17000c;
+	font-family: 'Inter', sans-serif;
+	background-color: #1a1d29;
 }
 
 .login-form label{
@@ -24,8 +22,8 @@
 }
 
 .form-title{
-	font-family: 'Oswald', sans-serif;
-	color: #c59108;
+	font-family: 'Inter', sans-serif;
+	color: #c8235d;
 }
 
 .form-secondary-title{
@@ -41,7 +39,7 @@
 }
 
 .sign-up-msg-btn{
-	color: #c59108;
+	color: #c8235d;
 }
 .sign-up-msg-btn:hover{
 	color: #A5BECC;
@@ -50,7 +48,7 @@
 .login-hero{
 	min-height: 55vh;
 	min-width: 40vw;
-	background-image: url(https://images.unsplash.com/photo-1499426666029-5c0678a1d89a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=776&q=80);
+	background-image: url(https://images.unsplash.com/photo-1585951237318-9ea5e175b891?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
