--- a/client/src/pages/signup/Signup.css
+++ b/client/src/pages/signup/Signup.css
@@ -1,22 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 .signup-form-container {
 	min-height: 96vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: #2d0112;
-	/* background-color: #fffafa; */
+background-color: #d4d4d4;;
 }
 
 .signup-form {
-	min-height: 35vh;
-	min-width: 20vw;
+	min-height: 45vh;
+	min-width: 27vw;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 	padding: 10px;
-	font-family: 'Poppins', sans-serif;
-	background-color: #17000c;
+	font-family: 'Inter', sans-serif;
+	background-color: #1a1d29;
 }
 
 .signup-form label{
@@ -24,8 +21,9 @@
 }
 
 .signup-form-title{
-	font-family: 'Oswald', sans-serif;
-	color: #c59108;
+	font-family: 'Inter', sans-serif;
+	font-weight: 600;
+	color: #c8235d;
 }
 
 .signup-form-secondary-title{
@@ -37,7 +35,7 @@
 }
 
 .log-in-msg-btn{
-	color: #c59108;
+	color: #c8235d;
 }
 
 .log-in-msg-btn:hover{
@@ -73,11 +71,11 @@
 .register-btn {
 	border: none;
 	padding: 6px 40px;
-	background-color: #B25068;
+	background-color: #c8235d;
 	color: whitesmoke;
 	border-radius: 5px;
 }
 
 button[disabled]{
-	background-color: #b2506858;
+	background-color: #c8235d52;
 }
