--- a/client/src/pages/dashboard/Dashboard.css
+++ b/client/src/pages/dashboard/Dashboard.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
 .dashboard {
-	background-color: #0e1014;
+	background-color: #2c2c2e;
 	min-height: 94;
 	padding-bottom: 25px;
 }
