styling changes on the snacklist page

--- a/client/src/pages/dashboard/Dashboard.css
+++ b/client/src/pages/dashboard/Dashboard.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
 .dashboard {
-	background-color: #2c2c2e;
+	/* background-color: #2c2c2e; */
+	background-image: url(https://images.unsplash.com/photo-1585647347483-22b66260dfff?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80);
+	background-position:top;
+	background-size: contain;
 	min-height: 94;
 	padding-bottom: 25px;
 }
