--- a/client/src/pages/snackList/SnackList.css
+++ b/client/src/pages/snackList/SnackList.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
 .snacklist {
-	min-height: 95vh;
+	min-height: 94vh;
 	background-color: #0e1014;
+	background-image: url("../../../public/images/endless-constellation.png");
+	background-position:center;
+	background-size: cover;
+	min-height: 94;
 	font-family: 'Inter', sans-serif;
 }
 
@@ -27,9 +31,12 @@
 }
 
 .snack-list {
-	width: 50%;
 	height: 45vh;
+	width: 100%;
 	overflow-y : scroll;
+	background-color: #0e101485;	
+	border-radius: 10px;
+	padding: 10px;
 }
 
 .modal-btn {
