--- a/client/src/components/movieCard/MovieCard.css
+++ b/client/src/components/movieCard/MovieCard.css
@@ -27,6 +27,25 @@
 	border-radius: 50%;
 }
 
+.favourite{
+	position: absolute;
+	right: 3px;
+	top: 1px;
+	background-color: #0e101472;
+	color: #f2f4fa;
+	height: 40px;
+	width: 40px;
+	border-radius: 50%;
+}
+
+.star {
+	font-weight: bold;
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
 .rating {
 	font-weight: bold;
 	position: relative;
